[gd_scene load_steps=3 format=3 uid="uid://du4d5qklb11v6"]

[ext_resource type="Script" uid="uid://bpnbdfx4ld7o5" path="res://scripts/pause_menu.gd" id="1_n87rw"]
[ext_resource type="FontFile" uid="uid://biqtga8moh7ah" path="res://fonts/lilita_one_regular.ttf" id="2_myx47"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_n87rw")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.043137256, 0.043137256, 0.043137256, 0.49019608)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
self_modulate = Color(0.33333334, 1, 1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 492.0
offset_top = 172.0
offset_right = 748.0
offset_bottom = 556.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="ResumeButton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_myx47")
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="OptionsButton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_myx47")
theme_override_font_sizes/font_size = 32
text = "Return to Main Menu"

[node name="SettingsButton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_myx47")
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="RestartButton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_myx47")
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="QuitButton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_myx47")
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
